vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_array_elem_type_expr.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_array_elem_type_expr.vv:2:2: error: expression evaluated but not used
    1 | fn main() {
    2 |     []typeof([$embed_file(@FILE)]).element_type{}
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    3 | }
