vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_array_elem_type_expr.vv
fn main() {
	[]typeof([$embed_file(@FILE)]).element_type{}
}
